Add instructions for building with Java 11